--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "New York, NY"
   employer         : #"City University of New York"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=zVCdoCEAAAAJ&hl=es"
+  googlescholar    : #"https://scholar.google.com/citations?user=zVCdoCEAAAAJ&hl=es"
   email            : LiVasquez@jjay.cuny.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
